--- a/index.html
+++ b/index.html
@@ -19,15 +19,24 @@
     <h2>My Map</h2>
     <button id="lokasi" style="display: none;" onclick="getLocation()">Lokasi Saya</button>
     <div id="map" class="map"></div>
+    <div id="info" style="display: none;"></div>
+    <label for="track">
+        track position
+        <input id="track" type="checkbox" />
+    </label>
 
     <p id="lat" style="display:none">Latitude: </p>
     <p id="long" style="display:none">Longitude: </p>
     <p id="jarak" style="display:none">Jarak: </p>
     <script type="text/javascript">
-        window.onload = function() {
-            document.getElementById("lokasi").click();
-        }
+        /*window.onload = function() {
+                                                                                                                            document.getElementById("lokasi").click();
+                                                                                                                        }*/
+
         let kantorPusat = [106.8418796, -6.2516778];
+        var x = document.getElementById("map");
+        var latitude = document.getElementById("lat");
+        var longitude = document.getElementById("long");
         const iconFeature = new ol.Feature({
             geometry: new ol.geom.Point(ol.proj.fromLonLat(kantorPusat)),
             name: 'Kisel',
@@ -84,9 +93,105 @@
             view: view
         });
 
-        var x = document.getElementById("map");
-        var latitude = document.getElementById("lat");
-        var longitude = document.getElementById("long");
+        var geolocation = new ol.Geolocation({
+            // enableHighAccuracy must be set to true to have the heading value.
+            //tracking: true,
+            trackingOptions: {
+                enableHighAccuracy: true,
+            },
+            projection: map.getView().getProjection(),
+        });
+
+        function el(id) {
+            return document.getElementById(id);
+        }
+
+        el('track').addEventListener('change', function() {
+            console.log("dipencet");
+            geolocation.setTracking(this.checked);
+        });
+
+
+        // handle geolocation error.
+        geolocation.on('error', function(error) {
+            var info = document.getElementById('info');
+            info.innerHTML = error.message;
+            info.style.display = '';
+        });
+
+        var accuracyFeature = new ol.Feature();
+        geolocation.on('change:accuracyGeometry', function() {
+            accuracyFeature.setGeometry(geolocation.getAccuracyGeometry());
+        });
+
+        var positionFeature = new ol.Feature();
+
+        geolocation.on('change:position', function(evt) {
+            var coordinates = geolocation.getPosition();
+            var speed = geolocation.getSpeed();
+            var altitude = geolocation.getAltitude();
+            var heading = geolocation.getHeading();
+
+            map.getView().setCenter(coordinates);
+            console.log(coordinates);
+            var iconFeature = new ol.Feature({
+                geometry: new ol.geom.Point(coordinates)
+            });
+            var vectorSource = new ol.source.Vector({
+                features: [iconFeature]
+            });
+            var iconStyle = new ol.style.Style({
+                image: new ol.style.Icon(({
+                    anchor: [0.5, 46],
+                    anchorXUnits: 'fraction',
+                    anchorYUnits: 'pixels',
+                    opacity: 0.75,
+                    scale: 0.5,
+                    src: 'user-location.png'
+                }))
+            });
+            var vectorLayer = new ol.layer.Vector({
+                source: vectorSource,
+                style: iconStyle
+            });
+            map.addLayer(vectorLayer);
+            ambilLokasi();
+        });
+
+        function ambilLokasi() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(liatPosisi);
+            } else {
+                x.innerHTML = "Geolocation is not supported by this browser.";
+            }
+        }
+
+        function liatPosisi(position) {
+            latitude.style.display = "block";
+            longitude.style.display = "block";
+            latitude.innerHTML = position.coords.latitude;
+            longitude.innerHTML = position.coords.longitude;
+            var from = kantorPusat;
+            var to = [position.coords.longitude, position.coords.latitude];
+            console.log(position.coords.longitude);
+            console.log(position.coords.latitude);
+
+            var options = {
+                units: 'kilometers'
+            };
+            var distance = turf.distance(to, from, options);
+            var value = document.getElementById('jarak');
+            value.style.display = "block";
+            value.innerHTML = "Jarak dari kantor ke lokasi Anda: " + distance.toFixed([2]) + " km"
+        }
+
+        new ol.layer.Vector({
+            map: map,
+            source: new ol.source.Vector({
+                features: [accuracyFeature, positionFeature],
+            }),
+        });
+
 
         function getLocation() {
             if (navigator.geolocation) {
